Start with zero guests

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
           <div class="form-group">
             <label for="exampleFormControlSelect1">Number of Guest</label>
             <select class="form-control" id="controlselector">
+              <option>0</option>
               <option>1</option>
               <option>2</option>
               <option>3</option>
