--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Hello, world!</title>
+    <title>Anthony loves Daria.</title>
   </head>
   <body>
     <div class="jumbotron custom-jumbotron jumbotron-fluid">
