Changed gradient of background img

--- a/index.html
+++ b/index.html
@@ -39,23 +39,6 @@
         <hr class="my-3" />
         <p class="lead display-4 day text-center"></p>
       </div>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active color" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link color" href="#">Our story</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link color" href="#">Wedding party</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link color" href="#">Things to do</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link color" href="#">Traval</a>
-        </li>
-      </ul>
     </div>
 
     <section>
@@ -86,9 +69,9 @@
       </div>
     </section>
 
-    <section class="py-5">
+    <section class="">
       <div class="container text-center mt-2 p-3">
-        <h3 class="py-5 cursive">Wedding Party.</h3>
+        <h3 class="cursive">Wedding Party.</h3>
         <div class="row m-2">
           <div class="col-md-6 p-3">
             <div class="card">
@@ -143,7 +126,7 @@
       </div>
     </section>
     <section id="todo">
-      <div class="container text-center mt-5">
+      <div class="container text-center">
         <h3 class="cursive mb-5">Things To Do</h3>
         <div class="row">
           <div class="col-md-4 my-2">
@@ -170,7 +153,7 @@
             <blockquote class="blockquote">
               <h4 class="cursive">Hotel</h4>
               <h5>
-                The third step is to find where to live. If you will stay in Moscow for a night, there is a lot of hotels for any price next to airport. In Belgorod, the are 2 options, you can find a hotel and also in Russia we have airbnb, there will be not to many options, I suggest to book in advance. 
+                The third step is to find where to live. If you will stay in Moscow for a night, there is a lot of hotels for any price next to airport. In Belgorod, there are 2 options, you can find a hotel and also in Russia we have airbnb, there will be not to many options, I suggest to book in advance. 
               </h5>
             </blockquote>
           </div>
@@ -217,7 +200,7 @@
               If there are no available flights close to your arrival time just take the train. 
               In case you traveling by yourself, I will meet you at Belgorod`s aiport or at train station. 
               <br>
-              The latter, you have to decide where you want to live. If you want to live all together to have more fun, you shoud choose an airbnb, I am sure there is big apartments for 4-6 people. 
+              The latter, you have to decide where you want to live. If you want to live all together to have more fun, you shoud choose an airbnb, I am sure there are big apartments for 4-6 people. 
               Belgorod is small, but a nice city, the location of apartment or hotel don't really important. You alway can call me or my amazing husband Antony for more imformation. 
               Can't wait for to see everyone in my motherland and share my culture with you.
             </h5>
