fixed some typos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <section class="">
+    <section>
       <div class="container text-center mt-2 p-3">
         <h3 class="cursive">Wedding Party.</h3>
         <div class="row m-2">
@@ -87,7 +87,7 @@
                   days. On the first day, the celebration involves dancing,
                   singing, toasting, and banqueting. The location will be a
                   local restaurant, Veretino. Click the link below for more
-                  infofmation.
+                  information.
                 </h5>
                 <a
                   href="https://vereteno31.ru/"
@@ -134,8 +134,8 @@
             <blockquote class="blockquote">
               <h4 class="cursive">Visa</h4>
               <h5>
-                The first step is getting a visa. For my non-russian friends i will send a visa invitation letter(also known as visa support). I suggest to apply for a visa three month before. In case of denial, don't get depressed, you will have time to aplly one more time. Don't worry, with the invitation you will get it.
-                
+                The first step is getting a visa. For my non-russian friends i will send a visa invitation letter(also known as visa support). I suggest to apply for a visa three month before. In case of denial, don't get depressed, you will have time to apply one more time. Don't worry, with the invitation you will get it.
+
               </h5>
             </blockquote>
           </div>
@@ -153,7 +153,7 @@
             <blockquote class="blockquote">
               <h4 class="cursive">Hotel</h4>
               <h5>
-                The third step is to find where to live. If you will stay in Moscow for a night, there is a lot of hotels for any price next to airport. In Belgorod, there are 2 options, you can find a hotel and also in Russia we have airbnb, there will be not to many options, I suggest to book in advance. 
+                The third step is to find where to live. If you will stay in Moscow for a night, there is a lot of hotels for any price next to airport. In Belgorod, there are 2 options, you can find a hotel and also in Russia we have airbnb, there will be not to many options, I suggest to book in advance.
               </h5>
             </blockquote>
           </div>
@@ -194,14 +194,14 @@
           </div>
           <div class="col-lg-5">
             <h5>
-              At first it might seem like a lot. Don't panic. I will help everyone with every step personaly. 
-              You have to decide what day you will get to Moscow. If everyone will come on the same day I can come to meet everyone at aiport for you to not get lost. 
-              I will also assist to buy tickets to Belgorod. You just need to let me know how you want to travel. 
-              If there are no available flights close to your arrival time just take the train. 
-              In case you traveling by yourself, I will meet you at Belgorod`s aiport or at train station. 
+              At first it might seem like a lot. Don't panic. I will help everyone with every step personally.
+              You have to decide what day you will get to Moscow. If everyone will come on the same day I can come to meet everyone at airport for you to not get lost.
+              I will also assist to buy tickets to Belgorod. You just need to let me know how you want to travel.
+              If there are no available flights close to your arrival time just take the train.
+              In case you traveling by yourself, I will meet you at Belgorod`s airport or at train station.
               <br>
-              The latter, you have to decide where you want to live. If you want to live all together to have more fun, you shoud choose an airbnb, I am sure there are big apartments for 4-6 people. 
-              Belgorod is small, but a nice city, the location of apartment or hotel don't really important. You alway can call me or my amazing husband Antony for more imformation. 
+              The latter, you have to decide where you want to live. If you want to live all together to have more fun, you should choose an airbnb, I am sure there are big apartments for 4-6 people.
+              Belgorod is small, but a nice city, the location of apartment or hotel don't really important. You always can call me or my amazing husband Antony for more information.
               Can't wait for to see everyone in my motherland and share my culture with you.
             </h5>
           </div>
